ui: adding CV (draft needs work)

--- a/gradient_descent.html
+++ b/gradient_descent.html
@@ -9,8 +9,8 @@
       --bg: transparent;
       --mesh: #f0f0f0;
       --edges: #bbbbbb;
-      --dot: #000000;
-      --trail: #000000;
+      --dot: #bd3c49;
+      --trail: #bd3c49;
       --target: #000000;
       --approx: #df9da6;
     }
@@ -83,7 +83,7 @@
     noiseScale: 0.2,
     
     // Animation
-    cycleSeconds: 8,
+    cycleSeconds: 5,
     stepsPerCycle: 120,
     eta: 0.09,
     momentum: 0.5,
